langtools/test/tools/javac/TryWithResources/BadTwrSyntax.out
BadTwrSyntax.java:14:43: compiler.err.illegal.start.of.expr
1 error
